mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/freeFunctions/free_constructor.sol
constructor() {}
// ----
// ParserError 7858: (0-11): Expected pragma, import directive or contract/interface/library/user-defined type/constant/function/error/event definition.
